<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.ProtoSynth.Player">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ImageButton
            android:id="@+id/playBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FA0000"
            android:contentDescription="@string/play_desc"
            android:scaleType="fitCenter"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:theme="@style/Theme.ProtoSynth.Player"
            app:srcCompat="@drawable/ic_play_btn" />

        <ImageButton
            android:id="@+id/stopBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/stop_desc"
            android:scaleType="fitCenter"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:theme="@style/Theme.ProtoSynth.Player"
            app:srcCompat="@drawable/ic_stop_btn" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/fast_backBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/fast_backward_desc"
            android:rotation="180"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_fast_forw_btn"
            android:scaleX="0.4"
            android:scaleY="0.4"
            android:theme="@style/Theme.ProtoSynth.Player"/>

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/backward_desc"
            android:rotation="180"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_forw_btn"
            android:scaleX="0.4"
            android:scaleY="0.4"
            android:theme="@style/Theme.ProtoSynth.Player"/>

        <ImageButton
            android:id="@+id/recordBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/record_desc"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_record_btn"
            android:scaleX="0.35"
            android:scaleY="0.35"
            android:theme="@style/Theme.ProtoSynth.Player"/>

        <ImageButton
            android:id="@+id/forwBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/forward_desc"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_forw_btn"
            android:scaleX="0.4"
            android:scaleY="0.4"
            android:theme="@style/Theme.ProtoSynth.Player"/>

        <ImageButton
            android:id="@+id/fast_forwBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/fast_forward_desc"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_fast_forw_btn"
            android:scaleX="0.4"
            android:scaleY="0.4"
            android:theme="@style/Theme.ProtoSynth.Player"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>